=== 1.0.0pre1 (Unreleased) ===

- Don't use very short timeouts in tests since Travis CI is slow sometimes
- Remove references to simplejson since py2.6 is not supported any more
- Change module namespace to 'skisolr'
- Use nose and coverage for tests
- Remove Python 2.6 support
- Add Solr.system_info to call Solr SystemInfoHandler
- Fix SolrCoreAdmin requests
- Add nested document support in Solr.add

Forked from pysolr (last commit 2015-02-02)